custom navigation: transporting arguments between screens https://www.youtube.com/watch?v=7q2c8bO3mTc&list=PLRmiL0mct8WkFdcvOCi06_64_ec3B2jvx&index=38&pp=iAQB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="random_label">Random Label</string>
     <string name="toast">"Greetings from"</string>
     <string name="toast_from">"Greetings from %1s"</string>
+    <string name="edit_item">Edit Item</string>
 </resources>
