--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="toast">"Greetings from"</string>
     <string name="toast_from">"Greetings from %1s"</string>
     <string name="edit_item">Edit Item</string>
+    <string name="loading_error">Loading error</string>
+    <string name="enter_new_item">Enter new item</string>
+    <string name="add">Add</string>
 </resources>
