--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="edit_item">Edit Item</string>
     <string name="loading_error">Loading error</string>
     <string name="enter_new_item">Enter new item</string>
+    <string name="edit_item_title">Edit Item title</string>
     <string name="add">Add</string>
+    <string name="accept">Accept</string>
 </resources>
